grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: k3s-deployment
spec:
  selector:
    app: grafana
  type: LoadBalancer
  ports:
    - port: 3000
      targetPort: 3000
